--- a/Exercise 1/01_Exercise.Rmd
+++ b/Exercise 1/01_Exercise.Rmd
@@ -226,9 +226,9 @@ h <- function(x) {
   1 * (x > 4)
 }
 
-theta_MC <- sum(h(x)) / n  # Monte Carlo estimate of Pr(X > 4)
-
-sample_var_MC <- sum((h(x) - theta_MC)^2) / (n - 1)  # Sampling variance
+hh <- h(x)                # I(X > 4) vector of ones and zeros
+theta_MC <- mean(hh)      # Monte Carlo estimate of Pr(X > 4)
+sample_var_MC <- var(hh)  # Sampling variance
 
 t <- qt(0.05/2, df = n - 1, lower.tail = FALSE)  # quantile with 5% significance level
 ci_MC <- theta_MC + t * sqrt(sample_var_MC / n) * c(-1, 1)  # Confidence Interval
@@ -318,9 +318,8 @@ w <- function(x) {
 
 hw <- h(x) * w(x)
 
-theta_IS <- sum(hw) / n  # Importance sampling estimate of Pr(X > 4)
-
-sample_var_IS <- sum((hw - theta_IS)^2) / (n - 1)  # Sampling variance
+theta_IS <- mean(hw)  # Importance sampling estimate of Pr(X > 4)
+sample_var_IS <- var(hw)  # Sampling variance
 
 t <- qt(0.05/2, df = n - 1, lower.tail = FALSE)  # quantile with 5% significance level
 ci_IS <- theta_IS + t * sqrt(sample_var_IS / n) * c(-1, 1)  # Confidence Interval
@@ -361,6 +360,16 @@ sample_from_proposal_mod <- function(n) {
 
 
 ### (b)
+
+```{r}
+set.seed(53)
+n <- 50000
+sample_pair <- sample_from_proposal_mod(n)
+
+hw1 <- h(sample_pair$x_1) * w(sample_pair$x_1)
+hw2 <- h(sample_pair$x_2) * w(sample_pair$x_2)
+```
+
 
 
 
