--- a/Exercise 1/01_Exercise.Rmd
+++ b/Exercise 1/01_Exercise.Rmd
@@ -3,6 +3,7 @@ title: "Exercise 1"
 author: "Mads Adrian Simonsen, William Scott Grundeland Olsen"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
+  github_document: default
   pdf_document: default
   html_document:
     df_print: paged
