--- a/Exercise 1/01_Exercise.Rmd
+++ b/Exercise 1/01_Exercise.Rmd
@@ -172,7 +172,7 @@ and assuming a prior that is $\Uniform(0, 1)$ the posterior will be
 $$
   f(\theta \mid \bfy) \propto f^*(\theta) := (2+\theta)^{y_1} (1-\theta)^{y_2+y_3} \theta^{y_3},
 $$
-for $\theta \in (0, 1)$. We wish to sample from this using a $\Uniform(0, 1)$ proposal density, that is, $g(\theta \mid \bfy) = 1$, for $\theta \in (0, 1)$. To do a rejection sampling (not weighted rejection sampling), we need to know the normalizing constant of $f(\theta \mid \bfy)$. That is, the constant $k$ such that $f(\theta \mid \bfy) = k f^*(\theta \mid \bfy)$. This can be found as
+for $\theta \in (0, 1)$. We wish to sample from this using a $\Uniform(0, 1)$ proposal density, that is, $g(\theta \mid \bfy) = 1$, for $\theta \in (0, 1)$. To do a rejection sampling (not weighted rejection sampling), we need to know the normalizing constant of $f(\theta \mid \bfy)$. That is, the constant $K$ such that $f(\theta \mid \bfy) = K f^*(\theta \mid \bfy)$. This can be found as
 $$
   \frac 1 K = \int_\mathbb{R} f^*(\theta \mid \bfy) \, \mathrm{d} \theta = \int_0^1 f^*(\theta \mid \bfy) \, \mathrm{d} \theta \approx 2.3577 \cdot 10^{28},
 $$
@@ -180,7 +180,15 @@ and we find it using the `integrate()`-function in `R` below. To use the rejecti
 $$
   \frac{f(\theta \mid \bfy)}{g(\theta \mid \bfy)} = f(\theta \mid \bfy) \leq k,
 $$
-and a value for $k$ is found in the code block below. We then simulate $\Theta \sim \Uniform(0, 1)$ and $U \sim \Uniform(0, 1)$ and calculate $\alpha = f(\theta \mid \bfy) / k$. Then, if $U \leq \alpha$, $\Theta$ is returned, and if not, the procedure is run again. We then sample from the posterior distribution in the code block below.
+and a value for $k$ is found in the code block below. This is done by setting $k = \max_\theta f^*(\theta \mid \bfy)$, and for the observed $\bfy$, we have that
+$$
+  \frac{\mathrm{d} f^*(\theta \mid \bfy)}{\mathrm{d} \theta} = (\theta-1)^{37} \theta^{33} (\theta + 2)^{124} (197 \theta^2 - 15 \theta - 68) = 0.
+$$
+Because $\theta \in (0, 1)$, the only factor we need to consider is $197 \theta^2 - 15 \theta - 68 = 0$, giving
+$$
+  \theta_\mathrm{max} = \frac{15 + \sqrt{53809}}{394},
+$$
+such that $k = f^*(\theta_\mathrm{max} \mid \bfy)$. This however is found numerically with the `optimize()`-function in `R` below. We then simulate $\Theta \sim \Uniform(0, 1)$ and $U \sim \Uniform(0, 1)$ and calculate $\alpha = f(\theta \mid \bfy) / k$. Then, if $U \leq \alpha$, $\Theta$ is returned, and if not, the procedure is run again. We then sample from the posterior distribution in the code block below.
 
 ```{r generate using rejection sampling}
 
@@ -214,14 +222,14 @@ rejection_sampling <- function(M, y) {
   count <- 0      # Count how many times the algorithm runs
   accept <- c()   # List of the accepted samples
   
-  while(length(accept) < M) {
-    U <- runif(1)
-    Theta <- runif(1)
+  while(length(accept) < M) {   # Running until we have M accepted samples
+    U <- runif(1)   # One Uniform(0, 1) sample
+    Theta <- runif(1)   # One Uniform(0, 1) sample
     alpha <- posterior(Theta, y) / k
     if(U <= alpha) {
-      accept <- rbind(accept, Theta)
+      accept <- rbind(accept, Theta)    # Appending to the list of accepted samples
     }
-    count <- count + 1
+    count <- count + 1    # while loop has run one more time
   }
   return(list("accept" = accept, "co" = count))
 }
@@ -235,9 +243,11 @@ Drawing $\Theta_1, \dots, \Theta_M \sim f(\theta \mid \bfy)$, the Monte Carlo es
 $$
   \hat{\mu} = \frac{1}{M} \sum_{i=1}^M \Theta_i.
 $$
-We do this for $M = 10000$ in the code block below. Figure \ref{fig:Monte_Carlo} shows the result of this. We see the estimation of the posterior mean $\E(\theta \mid \bfy)$ using Monte Carlo integration and numerical integration together with the theoretical posterior density distribution and a generated histogram of the samples. In the figure the posterior density is plotted using a normalizing constant we find by numerical integration in `R` below, giving the normalizing constant `norm_const`.
+We do this for $M = 10000$ in the code block below. Figure \ref{fig:Monte_Carlo} shows the result of this. We see the estimation of the posterior mean $\E(\theta \mid \bfy)$ using Monte Carlo integration and numerical integration together with the theoretical posterior density distribution and a generated histogram of the samples. In the figure the posterior density is plotted using a normalizing constant we find by numerical integration in `R`.
 
 ```{r Monte Carlo, fig.cap = "\\label{fig:Monte_Carlo}Estimation of the posterior mean $\\E(\\theta \\mid \\bfy)$ using Monte Carlo integration and numerical integration. A histogram of the samples is also shown together with the theoretical posterior density distribution."}
+
+set.seed(69)
 
 M <- 10000    # Number of samples from f(theta | y)
 
@@ -280,7 +290,7 @@ In the following code block we find the values of `mu_est` and `mu_num`.
 mu_est
 mu_num
 ```
-From this it is clear that the estimated posterior mean is $\hat{\mu} \approx 0.623$ using Monte Carlo integration, and $\mu \approx 0.623$ using numerical integration with `integrate()`. Figure \ref{fig:Monte_Carlo} also shows that these means corresponds well to the real posterior mean.
+From this it is clear that the estimated posterior mean is $\hat{\mu} \approx 0.624$ using Monte Carlo integration, and $\mu \approx 0.623$ using numerical integration with `integrate()`. Figure \ref{fig:Monte_Carlo} also shows that these means corresponds well to the real posterior mean.
 
 
 [//]: # ----------------------------------------------------------------------------------------------------------------
@@ -288,23 +298,21 @@ From this it is clear that the estimated posterior mean is $\hat{\mu} \approx 0.
 ## Subproblem 3.
 We are now interested in the number of random numbers the sampling algorithm needs to obtain one sample from $f(\theta \mid \bfy)$. The expected number of trials up to the first sample from $f(\theta \mid \bfy)$ is $c$ given by the condition
 $$
-  \frac{f(\theta \mid \bfy)}{g(\theta \mid \bfy)} = f(\theta \mid \bfy) \leq c.
+  \frac{f(\theta \mid \bfy)}{g(\theta \mid \bfy)} = f(\theta \mid \bfy) \leq k.
 $$
 We may then choose
 $$
-  c \geq \max_{\theta \in [0, 1]} f(\theta \mid \bfy),
+  k \geq \max_{\theta \in [0, 1]} f(\theta \mid \bfy),
 $$
-and we choose the equality. Thus we may find $c$ in `R` using the `optimize()`-function, and call this `const_num` to symbolize that this is the numerically calculated value, as in the following code block.
-```{r optimize}
-const_num <- optimize(function(theta)(posterior_f(theta, y)),
-                      interval = c(0, 1),
-                      maximum = TRUE)$objective
-const_num
+and we chose the equality earlier. This was found earlier and stored in the variable `k`, which we can see the value of in the code block below.
+```{r, eval = TRUE}
+k
 ```
-Using the sampler, the expected number of random numbers that has to be generated in order to obtain one sample of $f(\theta \mid \bfy)$ is given in the following code block.
+Using the sampler, the expected number of random numbers that has to be generated in order to obtain one sample of $f(\theta \mid \bfy)$ is the amount of times the ´while´ loop runs divided by the length amount of samples of $f(\theta \mid \bfy)$. This value is given in the following code block.
 ```{r using the sampling}
 Theta_samp$co / M
 ```
+These corresponds well, and we see that we need to generate approximately $7.8$ random numbers in order to obtain one sample of $f(\theta \mid \bfy)$.
 
 
 
@@ -324,9 +332,9 @@ $$
 $$
 where
 $$
-  w(\Theta_i) = \frac{\tilde{f}^*(\Theta_i \mid \bfy)}{f^*(\Theta_i)} = (1 - \Theta_i)^4.
+  w(\Theta_i) = \frac{\tilde{f}^*(\Theta_i \mid \bfy)}{f^*(\Theta_i)} = (1 - \Theta_i)^4,
 $$
-In the limit $n \to \infty$, the estimator $\tilde{\mu}_\mathrm{IS}$ is unbiased. Here $\Theta_1, \dots, \Theta_n \sim f(\theta \mid \bfy)$.
+and $\Theta_1, \dots, \Theta_n \sim f(\theta \mid \bfy)$. In the limit $n \to \infty$, the estimator $\tilde{\mu}_\mathrm{IS}$ is unbiased.
 
 ```{r importance sampling}
 set.seed(69)
@@ -336,9 +344,9 @@ posterior_tilde_star <- function(theta, y) {
 }
 
 importance_sampling <- function(n, y) {
-  Theta <- rejection_sampling(n, y)$accept
-  w <- (1 - Theta)^4
-  importance_mean <- sum(Theta * w) / sum(w)
+  Theta <- rejection_sampling(n, y)$accept    # Sample Theta from f(theta | y)
+  w <- (1 - Theta)^4    # Calculate the weights w
+  importance_mean <- sum(Theta * w) / sum(w)    # Self-normalizing importance sampling
   return(importance_mean)
 }
 
@@ -346,10 +354,10 @@ importance_sampling <- function(n, y) {
 n <- 10000
 y <- c(125, 18, 20, 34)   # Observed data
 
-mu_is <- importance_sampling(n, y)
+mu_is <- importance_sampling(n, y)    # Estimated using importance sampling
 mu_is
 
-# True mean
+# Finding mu using numerical integration
 const <- integrate(function(theta)(posterior_tilde_star(theta, y)),
                    lower = 0,
                    upper = 1)$value
@@ -360,7 +368,7 @@ true_mu
 
 ```
 
-We then see that the estimated $\tilde{\mu}_\mathrm{IS} \approx 0.5948$, while the true posterior mean is $\mu \approx 0.5959$. We notice that $\tilde{\mu}_\mathrm{IS} < \hat{\mu}$, as found in Subproblem 2. This can be explained by looking at the priors. The previous prior $\Betadist(1, 1)$ and the new prior $\Betadist(1, 5)$ are shown in Figure \ref{fig:priors}. From this it is clear that the $\Betadist(1, 5)$ prior favors lower values for $\theta$ compared to the uniform prior, which do not favor any particular $\theta$. It is therefore expected that $\tilde{\mu}_\mathrm{IS} < \hat{\mu}$, which is shown to be true.
+We then see that the estimated $\tilde{\mu}_\mathrm{IS} \approx 0.5948$, while the posterior mean using numerical integration is $\mu \approx 0.5959$, both of which corresponds well. We notice that $\tilde{\mu}_\mathrm{IS} < \hat{\mu}$, as found in Subproblem 2. This can be explained by looking at the priors. The previous prior $\Betadist(1, 1)$ and the new prior $\Betadist(1, 5)$ are shown in Figure \ref{fig:priors}. From this it is clear that the $\Betadist(1, 5)$ prior favors lower values for $\theta$ compared to the uniform prior, which do not favor any particular $\theta$. It is therefore expected that $\tilde{\mu}_\mathrm{IS} < \hat{\mu}$, which is shown to be true.
 
 ```{r priors, fig.cap = "\\label{fig:priors}The two priors $\\Betadist(1, 1)$ and $\\Betadist(1, 5)$."}
 ggplot() +
