--- a/Exercise 1/01_Exercise.Rmd
+++ b/Exercise 1/01_Exercise.Rmd
@@ -3,8 +3,8 @@ title: "Exercise 1"
 author: "Mads Adrian Simonsen, William Scott Grundeland Olsen"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
-  github_document: default
   pdf_document: default
+  github_document: default
   html_document:
     df_print: paged
 subtitle: TMA4300 Computer Intensive Statistical Models
@@ -38,6 +38,7 @@ knitr::opts_chunk$set(echo = TRUE, tidy = FALSE, message = FALSE, warning = FALS
 
 ```{r libraries, eval = TRUE, echo = FALSE}
 library(ggplot2)  # Create Elegant Data Visualizations Using the Grammar of Graphics
+library(tidyverse)
 #library(ISLR)  # Data from the book ISLR
 #library(boot)  # Bootstrap Functions
 #library(MASS)  # Support Functions and Datasets for Venables and Ripley's MASS
@@ -56,9 +57,9 @@ library(ggplot2)  # Create Elegant Data Visualizations Using the Grammar of Grap
 ```
 ```{r REMOVE THIS}
 #remove this------------------------------------------------------------------------------
-generate_from_exp <- function(n, rate = 1) {
-  Y <- runif(n)
-  X <- -(1 / rate) * log(Y)
+generate_from_exp <- function(n, rate) {
+  Y <- runif(n)   # Generate n Uniform(0, 1) variables
+  X <- -(1 / rate) * log(Y)   # Transformation
   return(X)
 }
 std_normal <- function(n) {
@@ -66,6 +67,23 @@ std_normal <- function(n) {
   X2 <- generate_from_exp(n, 1/2)   # n samples from Exponential(1/2)
   Z <- X2^(1/2) * cos(X1)   # Z ~ Normal(0, 1)
   return(Z)
+}
+generate_from_gx <- function(n, alpha) {
+  U <- runif(n)   # Generate n Uniform(0, 1) variables
+  bound <- exp(1) / (alpha + exp(1))   # Boundary where G^(-1) changes
+  left <- U < bound   # The left of the boundary
+  U[left] <- (U[left] / bound)^(1 / alpha)   # Left CDF
+  U[!left] <- 1 + log(alpha) - log(1 - U[!left]) - log(alpha + exp(1))   # Right CDF
+  return(U)
+}
+theo_gx <- function(x, alpha) {
+  const <- alpha * exp(1) / (alpha + exp(1))    # Normalizing constant
+  func <- rep(0, length(x))   # Vector of zeros of same length as x
+  left <- x > 0 & x < 1   # The PDF has one value for 0 < x < 1
+  right <- x >= 1         # ... and one value for x >= 1
+  func[left] <- const * x[left]^(alpha - 1)   # The value to the left
+  func[right] <- const * exp(-x[right])       # The value to the right
+  return(func)
 }
 #-----------------------------------------------------------------------------------------
 ```
@@ -88,14 +106,14 @@ Thus, we sample $Y$ from `runif()` and transform it using \eqref{eq:exp_transf},
 ```{r generate from exp, fig.cap = "\\label{fig:exp_hist}Normalized histogram of one million samples drawn from the exponential distribution, together with the theoretical pdf, with $\\lambda = 4.32$."}
 set.seed(123)
 
-generate_from_exp <- function(n, rate = 1) {
-  Y <- runif(n)
-  X <- -(1 / rate) * log(1 - Y)
-  X
+generate_from_exp <- function(n, rate) {
+  Y <- runif(n)   # Generate n Uniform(0, 1) variables
+  X <- -(1 / rate) * log(Y)   # Transformation
+  return(X)
 }
 
 # sample
-n <- 1000000  # One million samples
+n <- 1000000  # One million observations
 lambda <- 4.32
 x <- generate_from_exp(n, rate = lambda)
 
@@ -169,7 +187,7 @@ $$
 \end{split}
 $$
 
-We wish to sample from $\operatorname{Gamma}(\alpha, \beta = 1)$, using the proposal distribution $g(x)$ given in `eqref{??????}`. We want to choose $c$ such that the acceptance probability is maximized while \eqref{eq:rej_samp} is satisfied. We must check three cases. The trivial case when $x\leq 0$, we have $f(x) = g(x) = 0$ so \eqref{eq:rej_samp} is satisfied for all $c$. When $0<x<1$ we have
+We wish to sample from $\operatorname{Gamma}(\alpha, \beta = 1)$, using the proposal distribution $g(x)$ given in \eqref{eq:gx}. We want to choose $c$ such that the acceptance probability is maximized while \eqref{eq:rej_samp} is satisfied. We must check three cases. The trivial case when $x\leq 0$, we have $f(x) = g(x) = 0$ so \eqref{eq:rej_samp} is satisfied for all $c$. When $0<x<1$ we have
 
 $$
 \begin{split}
@@ -196,20 +214,24 @@ $$
 
 
 ### (b)
+Figure \ref{fig:gamma_rej} shows a sample drawn from the Gamma distribution using the rejection sampling method.
 
-```{r gamma rejection sampling}
+```{r gamma rejection sampling, fig.cap = "\\label{fig:gamma_rej}Normalized histogram of a hundred thousand samples drawn from $\\operatorname{Gamma}(\\alpha = 0.7, \\beta = 1)$ using rejection sampling, together with the theoretical density function."}
 set.seed(137)
 
+# Samples from the gamma distribution using rejection sampling with rate parameter = 1
+# n:     number of observations
+# shape: shape parameter, must be between 0 and 1
 sample_from_gamma_rej <- function(n, shape = 0.5) {
   c <- (1 / shape + 1 / exp(1)) / gamma(shape)    # constant that minimizes the envelope
-  x <- vector(mode = "numeric", length = n)
+  x <- vector(mode = "numeric", length = n)       # sample vector initialized
   for (i in 1:n) {
     repeat {
       x[i] <- generate_from_gx(1, alpha = shape)  # draw from proposal
       u <- runif(1)                               # draw from U(0, 1)
       f <- dgamma(x[i], shape = shape)            # target value
       g <- theo_gx(x[i], alpha = shape)           # proposal value
-      alpha <- (1 / c) * (f / g)
+      alpha <- (1 / c) * (f / g)                  # acceptance threshold
       if (u <= alpha) {
         break
       }
@@ -218,21 +240,35 @@ sample_from_gamma_rej <- function(n, shape = 0.5) {
   return(x)
 }
 
-# n <- 1000000
-# alpha <- 0.9
-# x <- sample_from_gamma_rej(n, shape = alpha)
-# hist(x,
-#   breaks      = 80,
-#   probability = TRUE,
-#   xlim        = c(0, 6)
-# )
-# curve(dgamma(x, shape = alpha),
-#   add = TRUE,
-#   lwd = 2,
-#   col = "red"
-# )
+# Sample
+n <- 100000  # Hundred thousand observations
+alpha <- 0.7
+x <- sample_from_gamma_rej(n, shape = alpha)
+
+# Plot
+ggplot() +
+  geom_histogram(
+    mapping = aes(x, after_stat(density)),
+    breaks  = seq(0, max(x), by = 0.1)
+  ) +
+   geom_function(
+     mapping = aes(color = "Theoretical density"),
+     fun     = dgamma,
+     n       = 1001,
+     args    = list(shape = alpha),
+   ) +
+   coord_cartesian(
+     xlim = c(0, 4),
+     ylim = c(0, 2.5)
+   ) +
+  theme_minimal()
 ```
 
+The expectation and variance of $X\sim\operatorname{Gamma}(\alpha = `r alpha`,\beta = 1)$ is $\E[X] = \alpha/\beta = `r alpha`$ and $\Var[x] = \alpha/\beta^2  = `r alpha`$. We compare with the sample mean and sample variance,
+```{r gamma sample mean and variance}
+list(sample_mean = mean(x), sample_variance = var(x))
+```
+and see that it corresponds well to the true values.
 
 
 [//]: # ----------------------------------------------------------------------------------------------------------------
@@ -304,9 +340,14 @@ $$
 \end{split}
 $$
 
-```{r gamma ratio-of-uniform method, fig.cap = "\\label{fig:gamma-trials}Number of trials before accepting $N = 1000$ simulations for various shape parameters ($\\alpha$) using the ratio-of-uniform method."}
+Figure \ref{fig:gamma-rou} shows a sample drawn from the Gamma distribution using the ratio-of-uniform method.
+
+```{r gamma ratio-of-uniform method, fig.cap = "\\label{fig:gamma-rou}Normalized histogram of ten thousand samples drawn from $\\operatorname{Gamma}(\\alpha = 487.9, \\beta = 1)$ using the ratio-of-uniform method, together with the theoretical density function."}
 set.seed(434)
 
+# Calculates the logarithmic core of the Gamma(shape = alpha, rate = 1) pdf
+# x:      x value(s)
+# alpha:  shape parameter
 lgamma_core <- function(x, alpha = 2) {
   ifelse(
     test = x <= 0,
@@ -315,6 +356,10 @@ lgamma_core <- function(x, alpha = 2) {
   )
 }
 
+# Samples from the Gamma distribution using the ratio-of-uniform method
+# n:              number of samples
+# shape:          shape parameter
+# include_trials: if TRUE, the number of trials will also be returned
 sample_from_gamma_rou <- function(n, shape = 2, include_trials = FALSE) {
   log_a <- ((shape - 1) / 2) * (log(shape - 1) - 1)
   log_b <- ((shape + 1) / 2) * (log(shape + 1) - 1)
@@ -322,10 +367,10 @@ sample_from_gamma_rou <- function(n, shape = 2, include_trials = FALSE) {
   y <- vector(mode = "numeric", length = n)
   for (i in 1:n) {
     repeat {
-      log_x1 <- log_a + log(runif(1))
-      log_x2 <- log_b + log(runif(1))
-      y[i] <- exp(log_x2 - log_x1)
-      log_f <- lgamma_core(y[i], alpha = shape)
+      log_x1 <- log_a + log(runif(1))            # draw log x_1, where x_1 ~ U(0, a)
+      log_x2 <- log_b + log(runif(1))            # draw log x_2, where x_2 ~ U(0, b)
+      y[i] <- exp(log_x2 - log_x1)               # ratio x_2 / x_1
+      log_f <- lgamma_core(y[i], alpha = shape)  # log f*(x_2 / x_1)
       if (log_x1 <= 0.5 * log_f) {
         break
       } else {
@@ -339,19 +384,49 @@ sample_from_gamma_rou <- function(n, shape = 2, include_trials = FALSE) {
   return(y)
 }
 
-# generate 1000 samples for each alpha and record number of trials
+# Sample
+n <- 10000  # Ten thousand observations
+alpha <- 487.9
+x <- sample_from_gamma_rou(n, shape = alpha)
+
+# Plot
+ggplot() +
+  geom_histogram(
+    mapping = aes(x, after_stat(density)),
+    bins = 50
+  ) +
+  geom_function(
+    mapping = aes(color = "Theoretical density"),
+    fun     = dgamma,
+    n       = 1001,
+    args    = list(shape = alpha),
+  ) +
+  theme_minimal()
+```
+
+The expectation and variance of $X\sim\operatorname{Gamma}(\alpha = `r alpha`,\beta = 1)$ is $\E[X] = \alpha/\beta = `r alpha`$ and $\Var[x] = \alpha/\beta^2  = `r alpha`$. We compare with the sample mean and sample variance,
+```{r gamma sample mean and variance 2}
+list(sample_mean = mean(x), sample_variance = var(x))
+```
+and see that they are close to the true values.
+
+```{r compare number of trials for each alpha, fig.cap = "\\label{fig:gamma-trials}Number of trials before accepting $N = 1000$ simulations for various shape parameters ($\\alpha$) using the ratio-of-uniform method."}
+set.seed(515)
+
+# Sample 1000 observations for each alpha and record number of trials
 n <- 1000
 m <- 50
 alpha <- seq(2, 2000, length.out = m)
-trials <- vector(mode = "integer", length = m)
+trials <- vector(mode = "integer", length = m)  # vector to store number of trials
 
 for (i in 1:m) {
   trials[i] <- sample_from_gamma_rou(n, alpha[i], include_trials = TRUE)$trials
 }
 
-# plot trials wrt. alpha
-ggplot(mapping = aes(x = alpha, y = trials)) +
-  geom_point()
+# Plot
+ggplot(mapping = aes(alpha, trials)) +
+  geom_point() +
+  theme_minimal()
 ```
 
 Figure \ref{fig:gamma-trials} strongly suggests that the acceptance probability decreases with increasing $\alpha$. That is, the ratio of the area of the square $a\cdot(b_+ - b_-) = ab$ and the region $C_f$ is increasing when $\alpha$ increases.
@@ -361,76 +436,55 @@ Figure \ref{fig:gamma-trials} strongly suggests that the acceptance probability 
 
 ## 3.
 
-### (a)
-Let $X_1$ and $X_2$ be independent random variables where $X_1\sim\operatorname{Gamma}(\alpha_1, \beta=1)$ and $X_2\sim\operatorname{Gamma}(\alpha_2, \beta=1)$.
-Then $X_1 + X_2$ has the following mgf:
-$$
-\begin{split}
-  M_{X_1 + X_2}(t)  &= M_{X_1}(t)\cdot M_{X_2}(t) \\
-  &= (1 - t)^{-\alpha_1}\cdot(1 - t)^{-\alpha_2} \\
-  &= (1 - t)^{-(\alpha_1 + \alpha_2)}, \quad t < 1.
-\end{split}
-$$
-That is, $X_1 + X_2\sim\operatorname{Gamma}(\alpha_1 + \alpha_2, \beta = 1)$.
-
-### (b)
-
-A $\Exp(1)$ distribution is a special case of $\operatorname{Gamma}(\alpha, \beta)$ with parameters $\alpha=\beta=1$. Using the result obtained in **(a)**, we then have that the sum of a random sample $X_1,\ldots, X_k$ drawn from $\Exp(1)$ has a $\operatorname{Gamma}(k, 1)$ distribution. We can use this fact to improve our algorithm. 
-Let $k\in\mathbb N_0$ and let $r\in[0, 1)$ and assume $k + r > 0$. Then we can decompose any $\alpha>0$ as
-$$
-  \alpha = k + r.
-$$
-Let $X_1,\ldots,X_k\sim\Exp(1)$ be a random sample and $W\sim \operatorname{Gamma}(r, 1)$, where $W$ and $X_i$, $i = 1,\ldots, k$ are mutual independent. Then
-\begin{equation}\label{eq:gamma_exp}
-  Y = W + \sum_{i=1}^k X_i \sim \operatorname{Gamma}(\alpha = k + r, \beta = 1).
-\end{equation}
-
-That is, for any $\alpha > 0$, we will only use the rejection sampling method for $r = \alpha \operatorname{mod} 1$ to sample $W\sim\operatorname{Gamma}(r, 1)$, and for the remaining $k = \alpha - r$ (possibly zero), we sample $X_1,\dots,X_k\sim\Exp(1)$, and use \eqref{eq:gamma_exp} to sample from $\operatorname{Gamma}(\alpha,1)$.
-
-```{r}
-sample_from_gamma_improved <- function(n, shape = 1) {
-  r <- shape %% 1
-  if (r > 0) {
-    w <- sample_from_gamma_rej(n, shape = r)
-  } else {
-    w <- 0
-  }
-  k <- shape - r
-  if (k >= 1) {
-    xk <- matrix(generate_from_exp(n * k, rate = 1),
-                 nrow = n,
-                 ncol = k
-    )
-    x <- rowSums(xk)
-  } else {
-    x <- 0
-  }
-  return(x + w)
-}
-```
-
-
-
-[//]: # ----------------------------------------------------------------------------------------------------------------
-
-## 4.
-
 Since $\beta$ is an inverse scale parameter, we can simply draw samples from $\operatorname{Gamma}(\alpha, 1)$ and divide every sample by $\beta$. This can be shown by looking at the mgf of $X/\beta$ where $X\sim \operatorname{Gamma}(\alpha, 1)$.
 
 $$
   M_{X/\beta}(t) = M_X\left(\frac{t}{\beta}\right) = \left(1 - \frac{t}{\beta}\right)^{-\alpha} \sim \operatorname{Gamma}(\alpha,\beta).
 $$
+When $\alpha = 1$, this is simply the mgf of $\operatorname{Gamma}(1, \beta) \sim \Exp(\beta)$, so we can sample from `generate_from_exp()`. Using this fact together with the rejection sampling method for $0 < \alpha < 1$ and the ratio-of-uniforms method for $\alpha > 1$, we can sample from $\operatorname{Gamma}(\alpha,\beta)$ for any $\alpha>0$ and $\beta>0$.
 
 ```{r final gamma sampler}
-sample_from_gamma_final <- function(n, shape = 1, rate = 1) {
-  (1 / rate) * sample_from_gamma_improved(n, shape = shape)
+set.seed(304)
+
+# Samples from the Gamma distribution
+# n:      number of samples
+# shape:  shape parameter
+# rate:   rate parameter
+sample_from_gamma <- function(n, shape = 1, rate = 1) {
+  if (shape < 1) {
+    return(sample_from_gamma_rej(n, shape = shape) / rate)  # rejection sampling
+  } else if (shape > 1) {
+    return(sample_from_gamma_rou(n, shape = shape) / rate)  # ratio-of-uniform
+  }
+  generate_from_exp(n, rate = rate)  # shape = 1, draw from the exponential distribution
 }
+
+# Sample
+n <- 50000  # Fifty thousand observations each
+# Create a tibble (dataframe) to store expectation, variance, sample mean and sample
+# variance with different combinations of parameters
+gamma_tb <- expand_grid(alpha = c(0.5, 1, 30), beta = c(0.3, 14)) %>%
+  mutate(expectation = alpha/beta) %>%  # add expectation
+  mutate(sample_mean = 0) %>%           # initialize sample mean variable
+  mutate(variance = alpha/beta^2) %>%   # add variance
+  mutate(sample_variance = 0)           # initialize sample variance variable
+
+for (row in 1:nrow(gamma_tb)) {
+  alpha <- gamma_tb[row, ]$alpha  # shape
+  beta <- gamma_tb[row, ]$beta    # rate
+  x <- sample_from_gamma(n, shape = alpha, rate = beta)  # draw sample
+  gamma_tb[row, ]$sample_mean <- mean(x)                 # store sample mean
+  gamma_tb[row, ]$sample_variance <- var(x)              # store sample variance
+}
+
+gamma_tb
 ```
+The table shows that the expectation and variance corresponds well with the sample mean and sample variance from the samples.
 
 
 [//]: # ----------------------------------------------------------------------------------------------------------------
 
-## 5.
+## 4.
 
 ### (a)
 Let $X$ and $Y$ be independent random variables where $X\sim\operatorname{Gamma}(\alpha, 1)$ and $Y\sim\operatorname{Gamma}(\beta, 1)$. Let
@@ -461,18 +515,53 @@ $$
   &= \frac{\Gamma(\alpha + \beta)}{\Gamma(\alpha)\Gamma(\beta)}z^{\alpha - 1}(1 - z)^{\beta - 1},\quad z\in(0, 1).\\
 \end{split}
 $$
-That is, $f_Z(z)\sim \operatorname{Beta}(\alpha, \beta)$.
+That is, 
+\begin{equation}\label{eq:beta}
+  Z = \frac{X}{X + Y}\sim f_Z(z)\sim \operatorname{Beta}(\alpha, \beta).
+\end{equation}
+
 
 ### (b)
-```{r}
-sample_from_beta <- function(n, alpha, beta) {
-  x <- sample_from_gamma_final(n, shape = alpha)
-  y <- sample_from_gamma_final(n, shape = beta)
+
+Figure \ref{fig:beta} shows a sample drawn from the beta distribution, with help from `sample_from_gamma()` using \eqref{eq:beta}.
+```{r beta sample, fig.cap = "\\label{fig:beta}Normalized histogram of a hundred thousand observations drawn from $\\operatorname{Beta}(\\alpha = 2, \\beta = 5)$."}
+set.seed(7)
+# Samples from the beta distribution
+# n:      number of observations
+# shape1: shape parameter
+# shape2: shape parameter
+sample_from_beta <- function(n, shape1, shape2) {
+  x <- sample_from_gamma(n, shape = shape1)
+  y <- sample_from_gamma(n, shape = shape2)
   return(x / (x + y))
 }
+
+# Sample
+n <- 100000  # One hundred thousand observations
+alpha <- 2
+beta <- 5
+x <- sample_from_beta(n, shape1 = alpha, shape2 = beta)
+
+# Plot
+ggplot() +
+  geom_histogram(
+    mapping = aes(x, after_stat(density)),
+    bins = 50
+  ) +
+  geom_function(
+    mapping = aes(color = "Theoretical density"),
+    fun     = dbeta,
+    n       = 1001,
+    args    = list(shape1 = alpha, shape2 = beta),
+  ) +
+  theme_minimal()
 ```
 
-
+The expectation and variance of $Z\sim\operatorname{Beta}(\alpha = `r alpha`,\beta = `r beta`)$ is $\E[X] = \alpha/(\alpha + \beta) = `r alpha/(alpha + beta)`$ and $\Var[x] = \alpha\beta/((\alpha + \beta)^2(\alpha + \beta + 1))  = `r alpha * beta / ((alpha + beta)^2 * (alpha + beta + 1))`$. We compare with the sample mean and sample variance,
+```{r beta sample mean and variance}
+list(sample_mean = mean(x), sample_variance = var(x))
+```
+and we see that it corresponds well to the theoretical values.
 
 [//]: # ----------------------------------------------------------------------------------------------------------------
 [//]: # ----------------------------------------------------------------------------------------------------------------
@@ -509,9 +598,13 @@ and $t_{\alpha/2,\,n-1} = F_T^{-1}(1 - \alpha/2)$, where $F_T^{-1}(\cdot)$ is th
 
 ```{r Monte Carlo integration}
 set.seed(321)
-theta <- pnorm(4, lower.tail = FALSE)
-n <- 100000
-x <- std_normal(n)
+
+theta <- pnorm(4, lower.tail = FALSE)  # true value
+n <- 100000                            # number of observations
+x <- std_normal(n)                     # draw sample
+
+# Calculates I(x > 4), where I(.) is the indicator function
+# x: x-value(s)
 h <- function(x) {
   1 * (x > 4)
 }
@@ -520,7 +613,7 @@ hh <- h(x)                # I(X > 4) vector of ones and zeros
 theta_MC <- mean(hh)      # Monte Carlo estimate of Pr(X > 4)
 sample_var_MC <- var(hh)  # Sampling variance
 
-t <- qt(0.05/2, df = n - 1, lower.tail = FALSE)  # quantile with 5% significance level
+t <- qt(0.05/2, df = n - 1, lower.tail = FALSE)  # critical level with 5% significance
 ci_MC <- theta_MC + t * sqrt(sample_var_MC / n) * c(-1, 1)  # Confidence Interval
 
 # Result
@@ -588,14 +681,20 @@ $$
 ```{r Importance Sampling}
 set.seed(321)
 
+# Samples from the proposal distribution
+# n: number of observations
 sample_from_proposal <- function(n) {
   u <- runif(n)
   sqrt(4^2 - 2 * log(1 - u))
 }
 
-n <- 100000
-x <- sample_from_proposal(n)
+# Sample
+n <- 100000                   # Hundred thousand observations
+x <- sample_from_proposal(n)  # sample
 
+# Computes the weight f(x) / g(x) where f(x) is the target density and g(x) is the
+# proposal density.
+# x: x-value(s)
 w <- function(x) {
   f <- dnorm(x)                              # target density
   g <- ifelse(                               # proposal density
@@ -611,7 +710,7 @@ hw <- h(x) * w(x)
 theta_IS <- mean(hw)      # Importance sampling estimate of Pr(X > 4)
 sample_var_IS <- var(hw)  # Sampling variance
 
-t <- qt(0.05/2, df = n - 1, lower.tail = FALSE)  # quantile with 5% significance level
+t <- qt(0.05/2, df = n - 1, lower.tail = FALSE)  # critical level with 5% significance
 ci_IS <- theta_IS + t * sqrt(sample_var_IS / n) * c(-1, 1)  # Confidence Interval
 
 # Result
@@ -623,7 +722,7 @@ list(
 )
 ```
 
-The number of samples $m$ needed for the simple Monte Carlo estimator to achieve the same precision as the importance sampling approach, we would need
+We see that using this importance sampling method is more precise by far. The number of samples $m$ needed for the simple Monte Carlo estimator to achieve the same precision as the importance sampling approach, we would need
 
 $$
   m = n\frac{\widehat{\Var}[h(X)]}{\widehat{\Var}[h(X)w(X)]} = `r n`\frac{`r sample_var_MC`}{`r sample_var_IS`} = `r n * sample_var_MC / sample_var_IS`,
@@ -638,7 +737,35 @@ samples. That is, we need about $10$ million times more samples.
 ### (a)
 We modify `sample_from_proposal()` to return a pair of samples, where one takes $U\sim\Uniform(0,1)$ as argument and the other $1 - U$ as argument.
 
+Let $X_1^{(1)},\ldots X_n^{(1)}$ and $X_1^{(2)},\ldots,X_n^{(2)}$ be a such sample pair drawn from the proposal distribution, with the importance sampling estimators being
+$$
+  \hat\theta_\mathrm{IS}^{(1)} = \frac{1}{n}\sum_{i=1}^nh(X_i^{(1)})w(X_i^{(1)})\quad\text{and}\quad \hat\theta_\mathrm{IS}^{(2)} = \frac{1}{n}\sum_{i=1}^nh(X_i^{(2)})w(X_i^{(2)}).
+$$
+The antithetic estimator is then given by
+
+$$
+  \hat\theta_\mathrm{AS} = \frac{\hat\theta_\mathrm{IS}^{(1)} + \hat\theta_\mathrm{IS}^{(2)}}{2},
+$$
+with expectation
+
+$$
+  \E\left[\hat\theta_\mathrm{AS}\right] = \frac{1}{2}\left(\E\left[\hat\theta_\mathrm{IS}^{(1)}\right] + \E\left[\hat\theta_\mathrm{IS}^{(2)}\right]\right) = \theta,
+$$
+and variance
+
+$$
+\begin{split}
+  \Var\left[\hat\theta_\mathrm{AS}\right]
+  &= \frac{1}{4}\left(\Var\left[\hat\theta_\mathrm{IS}^{(1)}\right] + \Var\left[\hat\theta_\mathrm{IS}^{(2)}\right] + 2\Cov\left[\hat\theta_\mathrm{IS}^{(1)}, \hat\theta_\mathrm{IS}^{(2)}\right]\right) \\
+  &= \frac{\Var\left[h(X)w(X)\right]}{2n}\left(1 + \Corr\left[h(X^{(1)})w(X^{(1)}), h(X^{(2)})w(X^{(2)})\right]\right).
+\end{split}
+$$
+
 ```{r Proposal function modified}
+# Samples from the proposal distribution returning a list consisting of n pairs of
+# antithetic variates, with one taking U ~ Uniform(0, 1) as argument, and the other takes
+# (1 - U) as argument.
+# n: number of observations
 sample_from_proposal_mod <- function(n) {
   u <- runif(n)
   list(
@@ -653,30 +780,43 @@ sample_from_proposal_mod <- function(n) {
 
 ```{r Antithetic sampling}
 set.seed(53)
-n <- 50000
-sample_pair <- sample_from_proposal_mod(n)
 
-hw1 <- h(sample_pair$x_1) * w(sample_pair$x_1)
-hw2 <- h(sample_pair$x_2) * w(sample_pair$x_2)
+# Sample
+n <- 50000  # Fifty thousand observations 
+sample_pair <- sample_from_proposal_mod(n)  # n pairs of samples
+
+hw1 <- h(sample_pair$x_1) * w(sample_pair$x_1)  # first of pair 
+hw2 <- h(sample_pair$x_2) * w(sample_pair$x_2)  # second of pair
 hw_AS <- 0.5 * (hw1 + hw2)  # Antithetic sample
 
 theta_AS <- mean(hw_AS)      # Antithetic sampling estimate of Pr(X > 4)
 sample_var_AS <- var(hw_AS)  # Sampling variance
 
-t <- qt(0.05/2, df = n - 1, lower.tail = FALSE)  # quantile with 5% significance level
+t <- qt(0.05/2, df = n - 1, lower.tail = FALSE)  # critical level with 5% significance
 ci_AS <- theta_AS + t * sqrt(sample_var_AS / n) * c(-1, 1)  # Confidence Interval
 
 # Result
 list(
   theta_AS      = theta_AS,
   sample_var_AS = sample_var_AS,
+  sample_corr   = cor(hw1, hw2),
   confint       = ci_AS,
   error         = abs(theta_AS - theta)
 )
 ```
 
+We see an better estimate of $\theta$, even with half the sample size compared to the importance sampling.
 
-
+Above we found that
+\begin{equation}\label{eq:antith-var}
+  \Var\left[\hat\theta_\mathrm{AS}\right]
+  = \frac{\Var\left[h(X)w(X)\right]}{2n}\left(1 + \Corr\left[h(X^{(1)})w(X^{(1)}), h(X^{(2)})w(X^{(2)})\right]\right),
+\end{equation}
+which means that when the correlation term is equal to zero, we would expect about the same variance as in the importance sampling method with half the sample size. The sampling correlation computed above is
+$$
+  \Corr\left[h(X^{(1)})w(X^{(1)}), h(X^{(2)})w(X^{(2)})\right] = `r cor(hw1, hw2)`,
+$$
+which explains why we get an even more precise estimate.
 
 
 [//]: # ----------------------------------------------------------------------------------------------------------------
